--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,3 +4,40 @@
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+li {
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+}
+
+.header-top {
+  background-color: #0282f9;
+}
+
+.header-top .container {
+  display: flex;
+  justify-content: end;
+}
+
+.header-top li {
+  display: inline-block;
+  padding: 5px;
+  text-transform: uppercase;
+  font-size: 9px;
+}
+
+.header-top li a {
+  color: white;
+}
+
+.header-top li:first-child {
+  padding-right: 50px;
+}
+
