formattazione base footer bottom

--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,15 +1,25 @@
+//formattazione generale dell'header
+header{
+    li{
+        display: inline-block;
+        text-transform: uppercase;
+    }
+
+    .container, nav{
+        display: flex;
+    }
+}
+
+//formattazione dell'header top
 .header-top{
     background-color: $primary-color;
 
     .container{
-        display: flex;
         justify-content: end;
     }
 
     li{
-        display: inline-block;
         padding: 5px;
-        text-transform: uppercase;
         font-size: 9px;
         
         
@@ -23,3 +33,30 @@
     }
 }
 
+//formattazione dell'header bottom
+.header-bottom{
+    height: 80px;
+    
+    .logo{
+        height: 80px;
+
+        img{
+            height: 100%;
+            padding: 5px 0;
+        }
+    }
+
+    .container{
+        justify-content: space-between;
+        align-items: center;
+
+        li{
+            margin: 0 10px;
+            font-size: 14px;
+
+            a{
+                color: black;
+            }
+        }
+    }
+}
