--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,32 +12,53 @@
 li {
   list-style: none;
 }
-
 li a {
   text-decoration: none;
+}
+
+header li {
+  display: inline-block;
+  text-transform: uppercase;
+}
+header .container, header nav {
+  display: flex;
 }
 
 .header-top {
   background-color: #0282f9;
 }
-
 .header-top .container {
-  display: flex;
   justify-content: end;
 }
-
 .header-top li {
-  display: inline-block;
   padding: 5px;
-  text-transform: uppercase;
   font-size: 9px;
 }
-
 .header-top li a {
   color: white;
 }
-
 .header-top li:first-child {
   padding-right: 50px;
 }
 
+.header-bottom {
+  height: 80px;
+}
+.header-bottom .logo {
+  height: 80px;
+}
+.header-bottom .logo img {
+  height: 100%;
+  padding: 5px 0;
+}
+.header-bottom .container {
+  justify-content: space-between;
+  align-items: center;
+}
+.header-bottom .container li {
+  margin: 0 10px;
+  font-size: 14px;
+}
+.header-bottom .container li a {
+  color: black;
+}
