--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,6 +67,7 @@ header .container, header nav {
   height: 400px;
   width: 100%;
   background-color: red;
+  background-image: url("../img/jumbotron.jpg");
 }
 
 .comics {
