--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,12 +68,52 @@ header .container, header nav {
   width: 100%;
   background-color: red;
   background-image: url("../img/jumbotron.jpg");
+  background-size: cover;
+}
+
+main {
+  background-color: #1c1c1c;
 }
 
 .comics {
   display: flex;
   flex-wrap: wrap;
+  padding: 50px 0;
 }
 .comics .card {
   width: calc((100% / 12) * 2);
+  margin: 10px 0;
+}
+.comics .card h5 {
+  color: white;
+  text-transform: uppercase;
+}
+
+footer {
+  background-color: #303030;
+}
+footer .footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
+footer .footer-bottom button {
+  padding: 10px 20px;
+  text-transform: uppercase;
+  border: 1px solid #0282f9;
+  background-color: #303030;
+  color: white;
+}
+footer .footer-bottom h4 {
+  color: #0282f9;
+  text-transform: uppercase;
+  margin-right: 10px;
+}
+footer .footer-bottom .social {
+  display: flex;
+  align-items: center;
+}
+footer .footer-bottom .social img {
+  margin-right: 10px;
 }
